# azure-sdk-for-rust

./: Cargo.toml
eng/: emitter-package-lock.json  emitter-package.json
sdk/storage/azure_storage_blob/: CHANGELOG.md  Cargo.toml  findings.md  tsp-location.yaml
sdk/storage/azure_storage_blob/blob_storage/: Cargo.toml
sdk/storage/azure_storage_blob/blob_storage/src/: lib.rs
sdk/storage/azure_storage_blob/blob_storage/src/clients/: blob_client.rs  blob_container_client.rs  blob_service_client.rs
sdk/storage/azure_storage_blob/examples/: block_blob_client.rs  storage_logging.rs
sdk/storage/azure_storage_blob/perf/: list_blob_test.rs
sdk/storage/azure_storage_blob/src/: lib.rs
sdk/storage/azure_storage_blob/src/clients/: blob_client.rs  blob_container_client.rs  blob_service_client.rs  block_blob_client.rs  hierarchical_client.rs  mod.rs  units.rs
sdk/storage/azure_storage_blob/src/models/: download_result.rs  extensions.rs  method_options.rs  mod.rs  sas.rs  user_delegation_key.rs
sdk/storage/azure_storage_blob/src/partitioned_transfer/: download.rs  mod.rs
sdk/storage/azure_storage_blob/src/policies/: storage_headers_policy.rs
sdk/storage/azure_storage_blob/src/streams/: partitioned_stream.rs
sdk/storage/azure_storage_blob/tests/: append_blob_client.rs  blob_access_conditions.rs  blob_client.rs  blob_client_options.rs  blob_conditional_headers.rs  blob_container_client.rs  blob_service_client.rs  blob_tags_encoding.rs  block_blob_client.rs  hierarchical_client.rs  page_blob_client.rs  streaming.rs
sdk/storage/azure_storage_blob_test/src/: lib.rs
sdk/storage/azure_storage_queue/: CHANGELOG.md  findings.md  tsp-location.yaml
sdk/storage/azure_storage_queue/src/: lib.rs
sdk/storage/azure_storage_sas/: CHANGELOG.md  Cargo.toml  README.md
sdk/storage/azure_storage_sas/src/: blob.rs  builder.rs  common.rs  ip_range.rs  key.rs  lib.rs  protocol.rs  queue.rs  resource.rs
sdk/storage/azure_storage_sas/src/resource/: account.rs  queue.rs
sdk/storage/azure_storage_sas/src/resource/blob/: blob_resource.rs  container.rs  directory.rs  mod.rs
sdk/storage/blob_storage/: Cargo.toml
