[package]
name = "azure_storage_blob"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_storage_common.workspace = true
async-trait.workspace = true
async-std = { workspace = true }
azure_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
typespec_client_core = { workspace = true, features = ["reqwest"] }
typespec_derive = { workspace = true }
blob_storage = { path = "blob_storage" }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
