[package]
name = "azure_storage_sas"
version = "1.0.0"
description = "Shared Access Signature (SAS) generation for Microsoft Azure Storage services"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_storage_sas"
keywords = ["sdk", "cloud", "storage", "sas"]
categories = ["api-bindings"]

[features]
default = ["hmac_rust"]
hmac_rust = ["azure_core/hmac_rust"]
hmac_openssl = ["azure_core/hmac_openssl"]

[dependencies]
azure_core = { workspace = true }
percent-encoding.workspace = true
time.workspace = true
url.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
